--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,4 +5,12 @@
     p{
        color:#1B4EC4
      }
+     
+     #id_name{
+        font-size: 20px;
+     }
+     
+     .class_name{
+        font-size:20px;
+     }
 </body>
