--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,8 @@
     background-image:
     url("http://www.buzzfeed.com/ariellecalderon/life-hacks-every-girl-should-know-about")
     
-    p{
-       color:#1B4EC4
+    #bp {
+       color:blue;
      }
      
      #id_name{
