--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("http://www.buzzfeed.com/ariellecalderon/life-hacks-every-girl-should-know-about")
+    background-image: url("life_hacks.jpg")
 }
     
 #bp {
