--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
 .class {
      color: #8C39FF;
      font-size:20px;
-<img src= "unknown-1 .jpeg" alt=" make keys easier to organize" style= "width: 204px;height:140px">
+<img class = "unknown-1 .jpeg" style= "width: 204px;height:140px">
     
  
 }
