--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
 .class {
      color: #8C39FF;
      font-size:20px;
-<img class = "unknown-1 .jpeg" style= "width: 204px;height:140px">
+<img class = "https://github.com/Tbecton/Tbecton.github.io/blob/master/Unknown-1.jpeg" style= "width:204px;height:140px">
     
  
 }
