--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body{
 }
 .class {
      color:#23284F ;
-     font-size:20px;
+     font-size:50px;
 }
 
 img{
@@ -17,5 +17,5 @@ img{
 }
 
 img{
-    width;350px;
+    width:450px;
 }
